Closed
Bug 839927
Opened 13 years ago
Closed 13 years ago
Assertion with <style scoped> in SVG
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
RESOLVED
FIXED
mozilla21
People
(Reporter: jruderman, Assigned: heycam)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
|
136 bytes,
image/svg+xml
|
Details | |
|
1.07 KB,
patch
|
bzbarsky
:
review+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: only call UpdateIsElementInStyleScopeFlagOnSubtree on a subtree that has IsElementInStyleScope boolean flag set: 'aElement->IsElementInStyleScope()', file content/base/src/nsStyleLinkElement.cpp, line 259
> nsStyleLinkElement::DoUpdateStyleSheet(nsIDocument*, nsICSSLoaderObserver*, bool*, bool*, bool) [obj-firefox/dist/include/nsCOMPtr.h:764]
> nsStyleLinkElement::UpdateStyleSheetInternal(nsIDocument*, bool) [content/base/src/nsStyleLinkElement.cpp:206]
> mozilla::dom::SVGStyleElement::UnbindFromTree(bool, bool) [obj-firefox/dist/include/nsCOMPtr.h:492]
> mozilla::dom::Element::UnbindFromTree(bool, bool) [content/base/src/Element.cpp:1374]
> nsDocument::cycleCollection::UnlinkImpl(void*) [content/base/src/nsDocument.cpp:1744]
> nsCycleCollector::CollectWhite(nsICycleCollectorListener*) [xpcom/base/nsCycleCollector.cpp:2401]
> nsCycleCollector::FinishCollection(nsICycleCollectorListener*) [xpcom/base/nsCycleCollector.cpp:3021]
> nsCycleCollector::Collect(bool, nsCycleCollectorResults*, unsigned int, nsICycleCollectorListener*) [xpcom/base/nsCycleCollector.cpp:2906]
> nsCycleCollector::Shutdown() [obj-firefox/dist/include/nsCOMPtr.h:492]
> nsCycleCollector_shutdown() [xpcom/base/nsCycleCollector.cpp:3391]
> mozilla::ShutdownXPCOM(nsIServiceManager*) [xpcom/glue/nsCOMPtr.h:764]
> ScopedXPCOMStartup::~ScopedXPCOMStartup() [toolkit/xre/nsAppRunner.cpp:1126]
> XREMain::XRE_main(int, char**, nsXREAppData const*) [obj-firefox/dist/include/mozilla/mozalloc.h:224]
> XRE_main [toolkit/xre/nsAppRunner.cpp:4102]
> main [browser/app/nsBrowserApp.cpp:185]
Updated•13 years ago
|
Assignee: nobody → cam
| Assignee | ||
Comment 1•13 years ago
|
||
Attachment #712788 -
Flags: review?(bzbarsky)
Comment 2•13 years ago
|
||
Comment on attachment 712788 [details] [diff] [review]
patch
r=me
Attachment #712788 -
Flags: review?(bzbarsky) → review+
| Assignee | ||
Comment 3•13 years ago
|
||
Status: NEW → ASSIGNED
Comment 4•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
You need to log in
before you can comment on or make changes to this bug.
Description
•