Bug 839927 - Update scoped style content flags correctly when SVG <style scoped=""> elements are involved. r=bz